# movie-detector

./: .replit  LICENSE  README.md  main.py  pyproject.toml  render.yml  requirement.txt  requirements.txt
attached_assets/: Pasted-Great-Since-you-ve-got-the-secrets-working-and-the-app-running-on-Replit-here-s-how-to-deploy--1749553305378_1749553305382.txt
templates/: index.html
templates/static/: main.py  style.css
