[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "google-cloud-vision>=3.10.1",
    "requests>=2.32.4",
    "sift-stack-py>=0.6.2",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.0.0",
]
